# zubotsu

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  shell.nix
.github/ISSUE_TEMPLATE/: issue.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
migrations/2019-10-17-020805_user/: up.sql
migrations/2019-10-19-013340_users/: up.sql
src/: data.rs  db.rs  emoji.rs  main.rs  models.rs  schema.rs
