[package]
name = "zubotsu"
version = "0.5.0"
edition = "2018"
authors = ["Steven Sheffey <srs6p@mtmail.mtsu.edu>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/starfys/zubotsu"
repository = "https://github.com/starfys/zubotsu"
keywords = ["bot", "discord"]
readme = "README.md"

publish = false


[dependencies]
chrono = "0.4"
log = "0.4"
pretty_env_logger = "0.3"
serenity = "0.7"
threadpool = "1.7"
diesel = { version = "1.4", features = ["postgres"] }
dotenv = "0.10"
meval = "0.2"
rand = "0.7.2"

[build-dependencies]
git2 = "0.10"

[profile.release]
lto = true
